# Proteus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aax_builds.sh  mac_builds.sh  validate.sh  win_builds.sh
.github/workflows/: cmake.yml
installers/linux/: build_deb.sh
installers/mac/: Intro.txt  Proteus.pkgproj  build_mac_installer.sh
installers/windows/: Proteus_Install_Script.iss  build_win_installer.sh
modules/: CMakeLists.txt
resources/: CMakeLists.txt
src/: CMakeLists.txt  CabSim.h  Eq4Band.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTNeuralLSTM.cpp  ResampledRNN.cpp  ResampledRNN.h  SampleLSTM.h  SampleLSTM.tpp
